[gd_scene load_steps=10 format=3 uid="uid://65m6mp4m0yee"]

[ext_resource type="Script" uid="uid://ca5bspmjti3ij" path="res://src/app/viewer/ObjectViewer.gd" id="1"]
[ext_resource type="Script" uid="uid://dumtvp5ll7vg8" path="res://src/app/viewer/CameraController.gd" id="2"]
[ext_resource type="Script" uid="uid://bi6wfcch7dxeh" path="res://src/app/viewer/InspectorPanel.gd" id="3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.05, 0.05, 0.1, 1)
sky_horizon_color = Color(0.1, 0.1, 0.15, 1)
ground_bottom_color = Color(0.02, 0.02, 0.05, 1)
ground_horizon_color = Color(0.1, 0.1, 0.15, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
ambient_light_color = Color(0.2, 0.2, 0.3, 1)
ambient_light_energy = 0.3

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radial_segments = 32
rings = 16

[node name="ObjectViewer" type="Node3D"]
script = ExtResource("1")

[node name="SaveFileDialog" type="FileDialog" parent="."]
title = "Save Celestial Object"
size = Vector2i(600, 400)
access = 2
filters = PackedStringArray("*.sgb ; StarGen Binary", "*.json ; JSON")
file_mode = 4

[node name="LoadFileDialog" type="FileDialog" parent="."]
title = "Load Celestial Object"
size = Vector2i(600, 400)
access = 2
filters = PackedStringArray("*.sgb ; StarGen Binary", "*.json ; JSON")
file_mode = 0

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.7071068, -0.49999994, 0.5000001, 0, 0.70710695, 0.7071067, -0.7071068, -0.49999994, 0.5000001, 0, 0, 0)
shadow_enabled = true

[node name="BackLight" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -5, -5)
light_color = Color(0.9, 0.95, 1, 1)
light_energy = 0.67
light_indirect_energy = 2.32
light_volumetric_fog_energy = 10.237
light_angular_distance = 41.75
light_specular = 0.05

[node name="CameraRig" type="Node3D" parent="."]

[node name="CameraArm" type="Node3D" parent="CameraRig"]

[node name="Camera3D" type="Camera3D" parent="CameraRig/CameraArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
fov = 60.0
script = ExtResource("2")

[node name="CelestialObject" type="Node3D" parent="."]

[node name="Placeholder" type="MeshInstance3D" parent="CelestialObject"]
visible = false
mesh = SubResource("SphereMesh_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TopBar" type="Panel" parent="UI"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 60.0

[node name="MarginContainer" type="MarginContainer" parent="UI/TopBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "StarGen Object Viewer"

[node name="VSeparator" type="VSeparator" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
modulate = Color(0.7, 0.7, 0.7, 1)
layout_mode = 2
text = "Ready"

[node name="SidePanel" type="Panel" parent="UI"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 0
anchor_bottom = 1.0
offset_top = 60.0
offset_right = 350.0

[node name="MarginContainer" type="MarginContainer" parent="UI/SidePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="UI/SidePanel/MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("3")

[node name="GenerationSection" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GenerationLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Object Generation"

[node name="TypeContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/TypeContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Type:"

[node name="TypeOption" type="OptionButton" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/TypeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SeedContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/SeedContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Seed:"

[node name="SeedInput" type="SpinBox" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/SeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 999999.0
value = 12345.0
rounded = true

[node name="ButtonContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GenerateButton" type="Button" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Generate"

[node name="RerollButton" type="Button" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Generate with random seed"
text = "Re-roll"

[node name="HSeparatorFile" type="HSeparator" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FileSection" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="FileLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/FileSection"]
layout_mode = 2
text = "File Operations"
theme_override_font_sizes/font_size = 16

[node name="FileButtonContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/FileSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/FileSection/FileButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"
tooltip_text = "Save current object to file"

[node name="LoadButton" type="Button" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/FileSection/FileButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"
tooltip_text = "Load object from file"

[node name="FileInfo" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/FileSection"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
autowrap_mode = 2

[node name="HSeparator1" type="HSeparator" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="InspectorContainer" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Camera Controls"

[node name="CameraInfo" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
text = "• Left Mouse: Orbit
• Right Mouse: Pan
• Scroll: Zoom
• F: Focus on object"
